# trab2-ia-censo-ed-2023

./: .gitignore  README.md  column-filter.txt  filter-columns.py  filter-entries.py  pyproject.toml  trab2_ia_analise_censo_ed_2023.ipynb
.ipynb_checkpoints/: trab2_ia_analise_censo_ed_2023-checkpoint.ipynb
